2015-05-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Improve message.

2015-05-27  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: Fix previous patch.

2015-05-27  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: Call ndmp_connection_mover_read with the
	  header size as the offset.

2015-05-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Check all dles of a host have the same auth.

2015-05-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: Fix $failure_from.

2015-05-19  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm (print_to_server_and_die): Always FAILURE

2015-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: check ARCHIVEDIR is not inside DATADIR.

2015-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Fix progress_func and set timeout to 0.

2015-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: ADD NEARLINE storage.
	* man/xml-source/amanda-devices.7.xml: Document NEARLINE storage.

2015-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c (progress_function): Fail on timeout.
	* device-src/s3.c (RESULT_HANDLING_ALWAYS_RETRY): Add
	  CURLE_ABORTED_BY_CALLBACK.

2015-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl (backup): Create an archive directory
	  with the same permission as the data directory.

2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/multi.pm (update): Allow 'error' for the slot
	  range.
	* perl/Amanda/Changer/robot.pm (update): Allow 'error' for the slot
	  range.
	* installcheck/Amanda_Changer_robot.pl: Fix.
	* man/xml-source/amanda-changers.7.xml: Add error keyword.

2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (set_error_to_unknown): New function