@@ -1,3 +1,6 @@
+2015-05-29  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amcheck.c: Check auth on both local and client check.
+
 2015-05-28  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amcheck.c: Improve message.
 
